# infotecs-cpp-task

./: CMakeLists.txt  LICENSE  README.md
libs/ArgumentsParser/: CMakeLists.txt  arguments_parser.cc  arguments_parser.h
src/: CMakeLists.txt  main.cc
src/ArgumentsParser/: arguments_parser.cc  arguments_parser.h
src/SourceHandler/: source_handler.cc  source_handler.h
src/StreamClassifier/: stream_classifier.cc  stream_classifier.h
src/TableFileWriter/: dsv_writer.cc  dsv_writer.h  table_file_writer.cc  table_file_writer.h
